syntax = "proto3";
// тип используемого синтаксиса

option csharp_namespace = "GreeterServiceApp";
//Название сервиса, которое будет использоваться с этим сервисом

package greet;



// определение сервиса
service Greeter {
  // отправка сообщения
  rpc SayHello (HelloRequest) returns (HelloReply);
}
 
// сообщение от клиента содержит name
message HelloRequest {
  string name = 1;
}
 
// сообщение клиенту содержит message
message HelloReply {
  string message = 1;
}
